CRUD API for ticket creation